# Scalable-Agents

./: .env.example  .gitignore  README.md  one_task.jsonl  pyproject.toml
docs/: architecture.md
src/agentic_hierarchy/: __init__.py  __main__.py  benchmarks.py  env.py  evaluator.py  executor.py  grammar.py  llm.py  models.py  operators.py  parallel.py  profiler.py  repo_tools.py  search.py  swebench_auto.py  utils.py
src/agentic_hierarchy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentic_hierarchy/api/: app.py
src/agentic_hierarchy/static/: app.js  index.html  styles.css
tests/: test_search.py
