[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-hierarchy"
version = "0.1.0"
description = "Budget-aware evolutionary search for agentic workflow graphs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=3.6.0",
  "fastapi>=0.116.0,<1.0.0",
  "openai>=1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
